- Fixed bug #33917 (number_format() output with > 1 char separators)